fullstack, major connections done